--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowUserLeilaoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowUserLeilaoComponent.razor
@@ -1,6 +1,6 @@
 ﻿@page "/showleiloesuser/{emailCL}"
 
-<ShowLeiloesComponent idFeira="-1" email="@emailCL" idStand="-1"/>
+<ShowLeiloesComponent idFeira="-1" email="@emailCL" idStand="-1" feiras="null" stands="null"/>
 
 @code 
 {
