--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/NavMenu.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/NavMenu.razor
@@ -1,5 +1,6 @@
 ﻿@using SourceCode.WebClasses;
 @using FeirasEspinhoBlazorApp.Pages.PagesLogin;
+@inject NavBar nav;
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -12,7 +13,7 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-        @foreach (Opcao op in lista)
+        @foreach (Opcao op in nav.GetMenu())
         {  
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href=@op.Link Match="NavLinkMatch.All">
@@ -20,7 +21,7 @@
                 </NavLink>
             </div>
         }
-        @if(show)
+        @if (nav.GetOpcao() != (int)NavBar.menusNomes.Login)
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="login" Match="NavLinkMatch.All" @onclick="Logout">
@@ -34,13 +35,12 @@
 @code
 {
     public bool show = false;
-    public List<Opcao> lista { get; set; }
     private bool collapseNavMenu = true;
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
     private static NavMenu instance;
     protected override void OnInitialized()
     {
-        lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Login);
+        nav.OnChange += StateHasChanged;
         instance = this;
     }
     private void ToggleNavMenu()
@@ -57,10 +57,8 @@
     }
     public void Logout()
     {
-        NavBar.GetInstance().Logout();
+        nav.Logout();
         show = false;
-        LoginComponent loginComponent = LoginComponent.GetInstance();
-        loginComponent.Logout();
-        lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Login);
+        nav.ChangeMenu((int)NavBar.menusNomes.Login);
     }
 }
