--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLogin/LoginComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLogin/LoginComponent.razor
@@ -42,11 +42,9 @@
 	private int erro = 0;
 	private string email = "";
 	private string password = "";
-	private Dictionary<int, string> codigosErro = new Dictionary<int, string>();
-	private static LoginComponent login;
+	private Dictionary<int, string> codigosErro = new();
 	protected override async Task OnInitializedAsync()
 	{
-		login = this;
 		this.codigosErro[1] = "Dados de acesso incorretos";
 		this.codigosErro[2] = "Campos incompletos";
 		this.codigosErro[3] = "Utilizador não existe";
@@ -55,10 +53,6 @@
 	{
 		email = "";
 		password = "";
-	}
-	public static LoginComponent GetInstance()
-	{
-		return login;
 	}
 	private async Task VerificaCredencais()
 	{
@@ -92,12 +86,12 @@
 							break;
 					}
 					nav.State = true;
-					//NavMenu.GetInstance().show = true;
-					//NavMenu.GetInstance().Refresh();
 					navigationManager.NavigateTo("user/" + email);
 				}
 				else
+				{
 					erro = 3;
+				}
 			}
 			catch (Exception e)
 			{
