--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/NotificationsComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/NotificationsComponent.razor
@@ -6,44 +6,82 @@
 <PageTitle>Notificações</PageTitle>
 
 <div>
-	<h3>Notificações</h3>
-	<br />
-	<div class="tableFixHead">
-		<table>
-			<thead>
-				<tr>
-					<th>Id</th>
-					<th>Origem</th>
-					<th>Assunto</th>
-					<th>Mensagem</th>
-					<th>Data</th>
-					<th>Vista</th>
-				</tr>
-			</thead>
-			<tbody>
-			@foreach (var notificacao in tabelContent.Content)
-			{
-				<tr class=@tabelContent.Cssclasses[notificacao.Item1]>
-					<td> @notificacao.Item2.Id</td>
-					<td> @notificacao.Item2.Email</td>
-					<td> @notificacao.Item2.Assunto</td>
-					<td> @notificacao.Item2.Mensagem</td>
-					<td> @notificacao.Item2.Data</td>
-					<td> @notificacao.Item2.Vista</td>
-				</tr>
-			}
-			</tbody>
-		</table>
-	</div>
+	@if(show)
+	{
+		<ShowNotificacaoComponent  component="this" notificacao="selected" />
+	}
+	else
+	{
+		<h2>Notificações</h2>
+		<br />
+		@if(erro != 0)
+		{
+			<WarningComponent mensagem="@codigosErro[erro]" sucess="false" page="20"/>
+		}
+		<div class="tableFixHead">
+			<table>
+				<thead>
+					<tr>
+						<th>Id</th>
+						<th>Origem</th>
+						<th>Assunto</th>
+						<th>Data</th>
+						<th>Vista</th>
+					</tr>
+				</thead>
+				<tbody>
+					@foreach (var notificacao in tabelContent.Content)
+					{
+						<tr class=@tabelContent.Cssclasses[notificacao.Item1] @onclick="() => tabelContent.SelectedRow(notificacao.Item1)">
+							<td> @notificacao.Item2.Id</td>
+							<td> @nomes[notificacao.Item2.Email]</td>
+							<td> @notificacao.Item2.Assunto</td>
+							<td> @notificacao.Item2.Data.ToShortDateString()</td>
+							<td> @notificacao.Item2.Vista</td>
+						</tr>
+					}
+				</tbody>
+			</table>
+		</div>
+		<br />
+		<div>
+			<button class="buttonA" @onclick="Consultar">Consultar verificação</button>
+		</div>
+	}
 </div>
 @code
 {
 	[Parameter, EditorRequired]
 	public string email { get; set; }
+	private Dictionary<string, string> nomes = new();
+	private bool show = false;
+	private int erro = 0;
 	private Table<Notificacao> tabelContent;
+	private Notificacao selected;
+	private Dictionary<int, string> codigosErro = new();
 	protected override void OnInitialized()
 	{
+		codigosErro[1] = "Notificacao não selecionada";
 		List<Notificacao> notificacaos = facade.GetNotificacaos(email);
+		notificacaos.ForEach(n => { if (!nomes.ContainsKey(n.Email)) nomes.Add(n.Email, facade.GetUtilizador(n.Email).Username); });
+		show = false;
 		this.tabelContent = new Table<Notificacao>(notificacaos);
+	}
+	private void Consultar()
+	{
+		if (tabelContent.IdValid())
+		{
+			show = true;
+			selected = tabelContent.GetElement();
+		}
+		else
+			erro = 1;
+	}
+	public void GetBack()
+	{
+		erro = 0;
+		show = false;
+		tabelContent.Unselect();
+		StateHasChanged();
 	}
 }
